source/stylesheets/left.css
.left {
  float: left;
  max-width: 150px;
  margin-right: 10px;
  font-size: 0.7rem;
  margin-bottom: 10px;
  overflow: hidden;
}

.left section {
  margin-bottom: 15px;
}

.left img {
  margin-bottom: 10px;
}

.left li {
  list-style-type: none;
  margin-bottom: 2px;
}

.left #listening, #reading li {
  max-width: 120px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.left #reading li {
  list-style-type: circle;
  list-style-position: inside;
  margin-left: 5px;
  margin-bottom: 5px;
}

.left #listening:hover, #reading li:hover {
  overflow: visible;
  max-width: none;
}

.left section {
  text-align: left;
}

.left section p {
  line-height: normal;
}

